fix bitrate stuff somewhat, will work for now

--- a/go/victim/Dockerfile
+++ b/go/victim/Dockerfile
@@ -2,7 +2,8 @@ FROM alpine:latest
 
 RUN apk update && apk add --no-cache tcpdump wireshark
 
-COPY . /
+COPY . /victim
+WORKDIR /victim
 
-ENTRYPOINT ["sh", "/victim.sh"]
+ENTRYPOINT ["sh", "./victim.sh"]
 
