--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -4,7 +4,7 @@ COPY . /app
 WORKDIR /app
 
 RUN apt update
-RUN apt install -y libpcap* net-tools iputils-ping
+RUN apt install -y libpcap* net-tools iputils-ping tcpdump
 RUN go install
 
 ENTRYPOINT ["sh", "./run.sh"]
